# RL_trading

./: .gitignore  AGENTS.md  BASELINE_NOTES.md  CHANGELOG.md  LICENSE  Makefile  PROJECT_STATUS.md  README.md  backtest_output.txt  backtest_output2.txt  debug_test.py  env_intraday_rl_mod.py  example_settings.yaml  execution_mod.py  features_pipeline_mod.py  fix_backtest_nan.py  fix_execution_nan.py  fix_nan_int_conversion.py  gemini_state.md  ibkr_client_mod.py  inspect_data.py  minimal_test.py  profile.out  pyproject.toml  pytest.ini  requirements.txt  run_backtest.sh  setup_codex_refactor.sh  state.json  status.md  test_end_to_end_system.py  test_polygon_compatibility.py
configs/: active_trader.yaml  instruments.yaml  quick_multiticker.yaml  quick_multiticker_autogen.yaml  settings.yaml  settings.yaml.old
data/: polygon_ingestor.py
docs/: AUDIT_REPO_MAP.md  DESIGN_BC_AUX.md  DESIGN_MULTITICKER_EMBEDS.md  DESIGN_OOS_EVAL.md  DESIGN_RL_CONSTRAINTS.md  DESIGN_TUNING.md  DRY_RUNS.md  FULL_RUNBOOK.md  PATCHPLAN_BC_AUX.md  PATCHPLAN_MULTITICKER_EMBEDS.md  PATCHPLAN_OOS_EVAL.md  PATCHPLAN_RL_CONSTRAINTS.md  TECH_OVERVIEW.md  TICKER_SOURCE_SUMMARY.md  configuration_handling.md  features_spec.md  label_spec.md  measurement_plan.md  rl_improvement_plan.md  rulebook.md  user_guide.md
docs/api/: multiticker_api_reference.md
docs/code_map/: APIS.md  COMPAT_NOTES.md  DATA_FLOW.md  ENTRYPOINTS.md  MODULES.md
docs/config/: multi_ticker_config_structure.md
docs/deployment/: deployment_guide.md
docs/design/: advanced_hybrid2_reward.md  asymmetric_drawdown_penalty.md  dynamic_universe_selection.md  lagrangian_activity_shaping.md  microstructure_pca_features.md  multi_ticker_data_loading.md  multi_ticker_feature_pipeline.md  multi_ticker_reward_system.md  multi_ticker_rl_environment.md  opportunity_capture_shaping.md  potential_based_reward_shaping.md  ppo_lstm_enhancements.md  reward_decomposition_logging.md
docs/final_integration/: integration_plan.md
docs/roadmap/: STATUS.yaml  multiticker_reward_overhaul.md
examples/: data_loader_integration_example.py  multiticker_examples.ipynb  polygon_ingestion_example.py  polygon_re_backtest_continous.py  polygon_rl_backtest_example.py
reports/: BBVA_20250101_20250630.json  BBVA_20250101_20250630_fix.json  BBVA_20250101_20250630_norm.json  BBVA_20250101_20250630_quick_norm.json  BBVA_20250101_20250630_retrain_300k_norm.json  BBVA_20250101_20250630_retrain_norm.json  tmp_debug.json
scripts/: README_data_collection.md  aggregate_polygon_plus_range.py  aggregate_spy_data.py  aggregate_us_stock_data.py  analyze_features.py  audit_collect.py  audit_collect.sh  audit_data_inventory.py  collect_futures_data.py  collect_polygon_data.py  collect_polygon_us_stocks.py  debug_trade_check.py  download_spy_1m_backfill.py  download_vix_data.py  download_vix_polygon.py  download_vix_term_structure.py  download_with_polygon_module.py  evaluate_model.py  feature_screen.py  fetch_polygon_range.py  find_missing_intraday_spy.py  generate_features.py  generate_performance_report.py  generate_spy_features.py  ingest_external_vix.py  lr_bump.sh  make_curated_from_consensus.sh  oos_eval.py  plan_update.py  polygon_data_ingestion.py  prepare_context_with_fallback.py  prepare_market_context.py  rl_ablate.py  run_ablation_variants.sh  run_integration_tests.py  run_lowpx_portfolio.sh  run_monitoring_dashboard.py  run_multiticker_pipeline.py  run_paper_trading.py  run_quick_test.py  (+7 more)
tests/: __init__.py  ablation_testing.py  monte_carlo_validation.py  performance_benchmarking.py  robustness_testing.py  test_config_loader.py  test_data_modules.py  test_features.py  test_logging.py  test_metrics.py  test_multiticker_system.py  test_polygon_ingestor.py  test_rl_modules.py  test_simulation.py  test_trading.py  test_unified_data_loader.py
tools/: fix_polygon_timestamps.py
(+762 files in other folders)
